fixed inactive bullet color on dark mode

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -35,6 +35,7 @@
     --bg: #0f1214 !important;
     --text: #ffffff;
     --card: #181b1f !important;
+    --swiper-pagination-bullet-inactive-color: white;
 }
 
 // Dark mode
@@ -43,6 +44,7 @@
         --bg: #0f1214;
         --text: #ffffff;
         --card: #181b1f;
+        --swiper-pagination-bullet-inactive-color: white;
     }
 }
 
